--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,8 +11,12 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.11",
+    "axios": "^1.10.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-dropzone": "^14.3.8",
+    "react-infinite-scroll-component": "^6.1.0",
+    "react-router-dom": "^7.6.2",
     "tailwindcss": "^4.1.11"
   },
   "devDependencies": {
